--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -13,7 +13,7 @@ defmt = { version = "0.3", features = [] }
 defmt-rtt = "0.3"
 nrf-softdevice-defmt-rtt = { version = "0.1.0" }
 panic-probe = { version = "0.3", features= ["print-defmt"] }
-nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central"] } # , "critical-section-impl"
+nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
 embedded-hal = "0.2.6"
 embedded-storage = "0.3.0"
