--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -21,6 +21,7 @@ embedded-storage-async = "0.3.0"
 futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
 heapless = "0.7.1"
+num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
