--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -22,6 +22,11 @@ futures = { version = "0.3.5", default-features = false }
 fixed = "1.2.0"
 heapless = "0.7.1"
 num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
+ina219 = "0.1.0"
+shared-bus = "0.2.4"
+critical-section = "0.2.7"
+modular-bitfield = "0.11.2"
+byteorder = { version = "1.4.3", default-features = false }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
