--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -27,6 +27,7 @@ shared-bus = "0.2.4"
 critical-section = "0.2.7"
 modular-bitfield = "0.11.2"
 byteorder = { version = "1.4.3", default-features = false }
+uom = {version = "0.33.0", default-features = false, features = ["autoconvert", "f32", "si"] }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
