--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -4,6 +4,9 @@ edition = "2018"
 name = "discobiker"
 version = "0.1.0"
 
+[features]
+mdbt50q = []
+
 [dependencies]
 embassy = { version = "0.1.0", features = ["nightly", "defmt"]}
 embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac" ]}
@@ -32,6 +35,7 @@ uom = { version = "0.33.0", default-features = false, features = ["autoconvert",
 apds9960 = { version = "0.1.0", default-features = false, features = ["async"] }
 embedded-hal-async = "0.1.0-alpha.1"
 dimensioned = { version = "0.8.0", default-features = false }
+paste = "1.0.7"
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
