--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -3,12 +3,14 @@ authors = ["Quentin Smith <quentin@mit.edu>"]
 edition = "2018"
 name = "discobiker"
 version = "0.1.0"
+resolver = "2"
 
 [features]
 mdbt50q = []
 
 [dependencies]
 embassy = { version = "0.1.0", features = ["nightly", "defmt"]}
+embassy-hal-common = { version = "0.1.0", features = ["defmt"] }
 embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac" ]}
 embassy-embedded-hal = "0.1.0"
 cortex-m        = { version = "0.7.3" }
@@ -22,7 +24,7 @@ nrf-softdevice-s140 = { version = "0.1.1" }
 embedded-hal = "0.2.6"
 embedded-storage = "0.3.0"
 embedded-storage-async = "0.3.0"
-futures = { version = "0.3.5", default-features = false }
+futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
 fixed = "1.2.0"
 heapless = "0.7.1"
 num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
@@ -36,9 +38,13 @@ apds9960 = { version = "0.1.0", default-features = false, features = ["async"] }
 embedded-hal-async = "0.1.0-alpha.1"
 dimensioned = { version = "0.8.0", default-features = false }
 paste = "1.0.7"
+drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time", "neopixel"] }
+ector = { version = "0.1.0", default-features = false }
+reqwless = { version = "0.1", features = ["defmt"] }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
+embassy-hal-common = { git = "https://github.com/embassy-rs/embassy" }
 embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
 embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
 embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
@@ -47,3 +53,5 @@ nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
 nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice" }
 apds9960 = { git = "https://github.com/quentinmit/apds9960-rs", branch = "async" }
 uom = { git = "https://github.com/quentinmit/uom", branch = "photometric" }
+drogue-device = { git = "https://github.com/drogue-iot/drogue-device" }
+reqwless = { git = "https://github.com/drogue-iot/reqwless" }
