Add display actor

--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -37,6 +37,8 @@ dimensioned = { version = "0.8.0", default-features = false }
 paste = "1.0.7"
 drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time", "neopixel", "nrf"] }
 ector = { version = "0.1.0", default-features = false }
+ssd1306 = { version = "0.7.0" }
+embedded-graphics = "0.7.1"
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
@@ -52,3 +54,4 @@ uom = { git = "https://github.com/quentinmit/uom", branch = "photometric" }
 drogue-device = { git = "https://github.com/drogue-iot/drogue-device" }
 reqwless = { git = "https://github.com/drogue-iot/reqwless" }
 ector = { git = "https://github.com/drogue-iot/ector.git" }
+ssd1306 = { git = "https://github.com/simmsb/ssd1306.git" }
