--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -45,6 +45,8 @@ atomic_float = { version = "0.1.0", default-features = false }
 physical_constants = "0.4.1"
 staticvec = { version = "0.11.6", default-features = false, features = [] }
 serde = { version = "1.0.139", default-features = false, features = ["derive"] }
+bincode = { version = "2.0.0-rc.1", default-features = false, features = ["serde"] }
+serde_cbor = { version = "0.11.2", default-features = false }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
@@ -64,3 +66,4 @@ ssd1306 = { git = "https://github.com/simmsb/ssd1306" }
 display-interface = { git = "https://github.com/simmsb/display-interface" }
 physical_constants = { git = "https://github.com/quentinmit/rust-physical_constants", branch = "no_std" }
 dimensioned = { git = "https://github.com/quentinmit/dimensioned", branch = "no_std" }
+bincode = { git = "https://github.com/bincode-org/bincode" }
