--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -20,7 +20,7 @@ nrf-softdevice-defmt-rtt = { version = "0.1.0" }
 panic-probe = { version = "0.3", features= ["print-defmt"] }
 nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "ble-gatt-server", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1" }
-embedded-hal = "0.2.6"
+embedded-hal = "1.0.0-alpha.8"
 embedded-storage = "0.3.0"
 embedded-storage-async = "0.3.0"
 futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
