--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -47,6 +47,8 @@ staticvec = { version = "0.11.6", default-features = false, features = [] }
 serde = { version = "1.0.139", default-features = false, features = ["derive"] }
 bincode = { version = "2.0.0-rc.1", default-features = false, features = ["serde"] }
 serde_cbor = { version = "0.11.2", default-features = false }
+num-derive = "0.3.3"
+num_enum = { version = "0.5.7", default-features = false }
 
 [patch.crates-io]
 embassy = { git = "https://github.com/embassy-rs/embassy" }
