--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -11,6 +11,9 @@ mdbt50q = []
 [profile.dev.package.nrf-softdevice]
 opt-level = 3
 
+[profile.dev.package.embedded-graphics]
+opt-level = 3
+
 [dependencies]
 embassy = { version = "0.1.0", features = ["nightly", "defmt"]}
 embassy-hal-common = { version = "0.1.0", features = ["defmt"] }
