--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 binrw = { version = "0.9.2", default-features = false }
 byte = "0.2.6"
+enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
+num_enum = { version = "0.5.7", default-features = false }
+
+[patch.crates-io]
+enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }
