type for BlockPointerPair

--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -16,3 +16,6 @@ num_enum = { version = "0.5.7", default-features = false }
 
 [patch.crates-io]
 enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }
+
+[dev-dependencies]
+tokio-test = "0.4.2"
