--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arrayvec = { version = "0.7.2", default-features = false }
 byte = "0.2.6"
 crc = "3.0.0"
+defmt = "0.3.2"
 embedded-storage = "0.3.0"
 embedded-storage-async = "0.3.0"
 enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
@@ -18,4 +20,7 @@ num_enum = { version = "0.5.7", default-features = false }
 enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }
 
 [dev-dependencies]
+ctor = "0.1.22"
+log = "0.4.17"
+simplelog = { version = "0.12.0", features = ["paris"] }
 tokio-test = "0.4.2"
