--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 arrayvec = { version = "0.7.2", default-features = false }
+bitflags = "1.3.2"
 byte = "0.2.6"
 crc = "3.0.0"
 defmt = "0.3.2"
