--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["sync", "async"]
+sync = []
+async = ["dep:embedded-storage-async"]
+
 [dependencies]
 arrayvec = { version = "0.7.2", default-features = false }
 bitflags = "1.3.2"
@@ -12,9 +17,10 @@ byte = "0.2.6"
 crc = "3.0.0"
 defmt = "0.3.2"
 embedded-storage = "0.3.0"
-embedded-storage-async = "0.3.0"
+embedded-storage-async = { version = "0.3.0", optional = true }
 enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
 itertools = { version = "0.10.3", default-features = false }
+maybe-async-cfg = "0.2.1"
 num_enum = { version = "0.5.7", default-features = false }
 
 [patch.crates-io]
