--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -10,17 +10,20 @@ default = ["sync"]
 sync = []
 async = ["dep:embedded-storage-async"]
 nightly = ["async"]
+defmt = ["dep:defmt"]
+log = ["dep:log"]
 
 [dependencies]
 arrayvec = { version = "0.7.2", default-features = false }
 bitflags = "1.3.2"
 byte = "0.2.6"
 crc = "3.0.0"
-defmt = "0.3.2"
+defmt = { version = "0.3.2", optional = true }
 embedded-storage = "0.3.0"
 embedded-storage-async = { version = "0.3.0", optional = true }
 enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
 itertools = { version = "0.10.3", default-features = false }
+log = { version = "0.4.17", optional = true }
 maybe-async-cfg = "0.2.1"
 num_enum = { version = "0.5.7", default-features = false }
 
@@ -29,6 +32,5 @@ enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custo
 
 [dev-dependencies]
 ctor = "0.1.22"
-log = "0.4.17"
 simplelog = { version = "0.12.0", features = ["paris"] }
 tokio-test = "0.4.2"
