--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -16,6 +16,7 @@ log = ["dep:log"]
 [dependencies]
 arrayvec = { version = "0.7.2", default-features = false }
 bitflags = "1.3.2"
+bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
 byte = "0.2.6"
 crc = "3.0.0"
 defmt = { version = "0.3.2", optional = true }
