--- a/discobiker/littlefs-1/Cargo.toml
+++ b/discobiker/littlefs-1/Cargo.toml
@@ -26,7 +26,9 @@ enum-kinds = { version = "0.5.1", features = ["no-stdlib"] }
 itertools = { version = "0.10.3", default-features = false }
 log = { version = "0.4.17", optional = true }
 maybe-async-cfg = "0.2.1"
+num = { version = "0.4.0", default-features = false }
 num_enum = { version = "0.5.7", default-features = false }
+paste = "1.0.7"
 
 [patch.crates-io]
 enum-kinds = { git = "https://github.com/quentinmit/enum-kinds", branch = "custom-values" }
