--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -83,4 +83,5 @@ display-interface = { git = "https://github.com/simmsb/display-interface" }
 physical_constants = { git = "https://github.com/quentinmit/rust-physical_constants", branch = "no_std" }
 dimensioned = { git = "https://github.com/quentinmit/dimensioned", branch = "no_std" }
 bincode = { git = "https://github.com/bincode-org/bincode" }
-lsm6ds33 = { git = "https://github.com/quentinmit/lsm6ds33", branch = "async" }
+#lsm6ds33 = { git = "https://github.com/quentinmit/lsm6ds33", branch = "async" }
+lsm6ds33 = { path = "/Users/quentin/Software/lsm6ds33" }
