--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -30,11 +30,49 @@ opt-level = 3
 opt-level = 3
 debug-assertions = false
 overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
+
+[profile.dev.package.embedded-graphics-core]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
+
+[profile.dev.package.byteorder]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
+
+[profile.dev.package.float-cmp]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
 
 [profile.dev.package.ssd1306]
 opt-level = 3
 debug-assertions = false
 overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
+
+[profile.dev.package.display-interface]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+debug = false
+incremental = false
+codegen-units = 16
 
 [profile.dev.package.bincode]
 opt-level = 3
@@ -50,8 +88,8 @@ opt-level = 3
 
 [profile.dev.package.dimensioned]
 opt-level = 3
-debug-assertions = false
-overflow-checks = false
+#debug-assertions = false
+#overflow-checks = false
 
 [dependencies]
 embassy-executor = { version = "0.1.0", features = ["nightly", "unstable-traits"]}
