--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -14,7 +14,8 @@ defmt = [
     "dep:defmt",
     "dep:defmt-rtt",
     "embassy-executor/defmt",
-    "embassy-executor/defmt-timestamp-uptime",
+    "embassy-time/defmt",
+    "embassy-time/defmt-timestamp-uptime",
     "embassy-util/defmt",
     "embassy-hal-common/defmt",
     "embassy-nrf/defmt",
@@ -96,14 +97,15 @@ opt-level = 3
 #overflow-checks = false
 
 [dependencies]
-embassy-executor = { version = "0.1.0", features = ["nightly", "unstable-traits"]}
+embassy-executor = { version = "0.1.0", features = ["nightly", "integrated-timers"]}
+embassy-time = { version = "0.1.0", features = ["nightly", "unstable-traits"]}
 embassy-util = { version = "0.1.0", features = ["nightly", ]}
 embassy-hal-common = { version = "0.1.0", features = [] }
 embassy-nrf = { version = "0.1.0", features = ["nightly", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac"]}
 embassy-embedded-hal = "0.1.0"
-cortex-m = { version = "0.7.3" }
+cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.0"
-defmt = { version = "0.3", features = [], optional = true }
+defmt = { version = "0.3.2", features = [], optional = true }
 defmt-rtt = { version = "0.3.2", optional = true }
 panic-probe = { version = "0.3", features= [] }
 nrf-softdevice = { version = "0.1.0", features = ["nrf52840", "s140", "ble-peripheral", "ble-central", "ble-gatt-server", "critical-section-impl"] }
@@ -146,6 +148,7 @@ cfg-if = "1.0.0"
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
+#embassy-time = { git = "https://github.com/embassy-rs/embassy" }
 #embassy-util = { git = "https://github.com/embassy-rs/embassy" }
 #embassy-hal-common = { git = "https://github.com/embassy-rs/embassy" }
 #embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
@@ -159,7 +162,7 @@ uom = { git = "https://github.com/quentinmit/uom", branch = "photometric" }
 drogue-device = { path = "/Users/quentin/Software/drogue-device/device" }
 reqwless = { git = "https://github.com/drogue-iot/reqwless" }
 #ector = { git = "https://github.com/drogue-iot/ector.git" }
-ector = { git = "https://github.com/quentinmit/ector.git", branch = "embassy-split" }
+ector = { git = "https://github.com/quentinmit/ector.git", branch = "embassy-split-time" }
 #ssd1306 = { git = "https://github.com/simmsb/ssd1306" }
 ssd1306 = { path = "/Users/quentin/Software/ssd1306" }
 display-interface = { git = "https://github.com/simmsb/display-interface" }
@@ -171,6 +174,7 @@ lsm6ds33 = { path = "/Users/quentin/Software/lsm6ds33" }
 #bme280 = { git = "https://github.com/quentinmit/bme280-rs", branch = "async" }
 bme280 = { path = "/Users/quentin/Software/bme280-rs" }
 embassy-executor = { path = "/Users/quentin/Software/embassy/embassy-executor" }
+embassy-time = { path = "/Users/quentin/Software/embassy/embassy-time" }
 embassy-macros = { path = "/Users/quentin/Software/embassy/embassy-macros" }
 embassy-nrf = { path = "/Users/quentin/Software/embassy/embassy-nrf" }
 embassy-util = { path = "/Users/quentin/Software/embassy/embassy-util" }
