--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -118,7 +118,7 @@ fixed = "1.2.0"
 heapless = "0.7.1"
 log = { version = "0.4.17", optional = true }
 num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
-critical-section = "0.2.7"
+critical-section = "1.1.0"
 modular-bitfield = "0.11.2"
 byteorder = { version = "1.4.3", default-features = false }
 uom = { version = "0.33.0", default-features = false, features = ["autoconvert", "f32", "si"] }
@@ -139,7 +139,7 @@ bincode = { version = "2.0.0-rc.1", default-features = false, features = ["serde
 serde_cbor = { version = "0.11.2", default-features = false }
 num-derive = "0.3.3"
 num_enum = { version = "0.5.7", default-features = false }
-lsm6ds33 = { version = "0.4.0", default-features = false, features = ["async"] }
+lsm6ds33 = { version = "0.5.0", default-features = false, features = ["async"] }
 maybe-async-cfg = "0.2.1"
 bme280 = { version = "0.4.4", default-features = false, features = ["async"] }
 systemview-target = { version = "0.1.1", features = ["cortex-m"], optional = true }
@@ -170,7 +170,7 @@ physical_constants = { git = "https://github.com/quentinmit/rust-physical_consta
 dimensioned = { git = "https://github.com/quentinmit/dimensioned", branch = "no_std" }
 bincode = { git = "https://github.com/bincode-org/bincode" }
 #lsm6ds33 = { git = "https://github.com/quentinmit/lsm6ds33", branch = "async" }
-lsm6ds33 = { path = "/Users/quentin/Software/lsm6ds33" }
+#lsm6ds33 = { path = "/Users/quentin/Software/lsm6ds33" }
 #bme280 = { git = "https://github.com/quentinmit/bme280-rs", branch = "async" }
 bme280 = { path = "/Users/quentin/Software/bme280-rs" }
 embassy-executor = { path = "/Users/quentin/Software/embassy/embassy-executor" }
