--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -145,6 +145,8 @@ bme280 = { version = "0.4.4", default-features = false, features = ["async"] }
 systemview-target = { version = "0.1.1", features = ["cortex-m"], optional = true }
 rtos-trace = { version = "0.1.2", optional = true }
 cfg-if = "1.0.0"
+num-integer = { version = "0.1.45", default-features = false }
+microfft = "0.5.0"
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
