--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -147,6 +147,7 @@ rtos-trace = { version = "0.1.2", optional = true }
 cfg-if = "1.0.0"
 num-integer = { version = "0.1.45", default-features = false }
 microfft = "0.5.0"
+micromath = "2.0.0"
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
