--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -150,6 +150,7 @@ num-integer = { version = "0.1.45", default-features = false }
 microfft = "0.5.0"
 micromath = "2.0.0"
 static_cell = "1.0.0"
+trait_enum = { version = "0.5.0", default-features = false }
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
