--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -154,6 +154,7 @@ trait_enum = { version = "0.5.0", default-features = false }
 replace_with = { version = "0.1.7", default-features = false }
 nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
 tween = { version = "1.0.1", default-features = false, features = ["libm"] }
+pareen = { version = "0.3.0-alpha1", default-features = false, features = ["easer"] }
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
@@ -194,3 +195,5 @@ nrf-softdevice = { path = "/Users/quentin/Software/nrf-softdevice/nrf-softdevice
 nrf-softdevice-s140 = { path = "/Users/quentin/Software/nrf-softdevice/nrf-softdevice-s140" }
 #rtos-trace = { path = "/Users/quentin/Software/rtos-trace/rtos_trace" }
 #systemview-target = { path = "/Users/quentin/Software/rtos-trace/systemview_target" }
+pareen = { path = "/Users/quentin/Software/pareen" }
+easer = { path = "/Users/quentin/Software/rust-easing" }
