Bluetooth LED reflects connections status

--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -155,6 +155,7 @@ replace_with = { version = "0.1.7", default-features = false }
 nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
 tween = { version = "1.0.1", default-features = false, features = ["libm"] }
 pareen = { version = "0.3.0-alpha1", default-features = false, features = ["easer"] }
+atomic-traits = "0.3.0"
 
 [patch.crates-io]
 #embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
@@ -197,3 +198,4 @@ nrf-softdevice-s140 = { path = "/Users/quentin/Software/nrf-softdevice/nrf-softd
 #systemview-target = { path = "/Users/quentin/Software/rtos-trace/systemview_target" }
 pareen = { path = "/Users/quentin/Software/pareen" }
 easer = { path = "/Users/quentin/Software/rust-easing" }
+atomic-traits = { git = "https://github.com/flier/rust-atomic-traits", rev = "45f4b13d5f4880797cdf3d578ff8821e8bd7ce89" }
