--- a/discobiker/nom-protobuf/Cargo.toml
+++ b/discobiker/nom-protobuf/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.17"
 nom = { version = "7.1.3", default-features = false }
 num-traits = { version = "0.2.15", default-features = false }
 num_enum = { version = "0.5.9", default-features = false }
+paste = "1.0.11"
 residua-zigzag = "0.1.0"
 
 [dev-dependencies]
