--- a/discobiker/Cargo.toml
+++ b/discobiker/Cargo.toml
@@ -97,14 +97,14 @@ opt-level = 3
 #overflow-checks = false
 
 [dependencies]
-embassy-executor = { version = "0.1.0", features = ["nightly", "integrated-timers"] }
+embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "nightly", "integrated-timers", "executor-thread", "executor-interrupt"] }
 embassy-time = { version = "0.1.0", features = ["nightly", "unstable-traits"] }
 embassy-sync = { version = "0.2.0", features = ["nightly"] }
 embassy-futures = { version = "0.1.0", features = [] }
 embassy-hal-common = { version = "0.1.0", features = [] }
 embassy-nrf = { version = "0.1.0", features = ["nightly", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-traits", "unstable-pac"]}
 embassy-embedded-hal = "0.1.0"
-cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
+cortex-m = { version = "0.7.6", features = [] }
 cortex-m-rt = "0.7.0"
 defmt = { version = "0.3.2", features = [], optional = true }
 defmt-rtt = { version = "0.3.2", optional = true }
